vlib/v/checker/tests/immutable_field.vv
struct Aaa {
pub:
	i1 int
}

fn main() {
	a := Aaa{1}
	a.i1 = 2
}
